<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/announceBackBg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/announceBg"
            android:elevation="3dp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/announce_announce"
            android:textColor="@color/announceText"
            android:textSize="18sp"
            android:fontFamily="@font/notosanskr_bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/announce_ann01"
            android:textColor="@color/announceText"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/announce_ann02"
            android:textColor="@color/announceText"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/announce_ann03"
            android:textColor="@color/announceText"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/announce_ann04"
            android:textColor="@color/announceText"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_regular"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/announce_ann05"
                android:textColor="@color/announceText"
                android:fontFamily="@font/notosanskr_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/announce_ann05_plenty"
                android:textColor="@color/announceText"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_green_dot"
                android:drawablePadding="5dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/notosanskr_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/announce_ann05_som"
                android:textColor="@color/announceText"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_yellow_dot"
                android:drawablePadding="5dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/notosanskr_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/announce_ann05_few"
                android:textColor="@color/announceText"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_red_dot"
                android:drawablePadding="5dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/notosanskr_medium"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/announce_ann05_empty"
                android:textColor="@color/announceText"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_grey_dot"
                android:drawablePadding="5dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/notosanskr_medium"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/announce_ann06"
            android:textColor="@color/announceText"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/announce_ann07"
            android:textColor="@color/announceText"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/announce_ann08"
            android:textColor="@color/announceText"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/announceBg"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/announce_ann09"
            android:textColor="@color/announceText"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_regular"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>