<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.map.MapFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_container"
        android:name="com.naver.maps.map.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/main_ibtn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/main_cd_ic_search"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/main_ibtn_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/main_cd_ic_mylocation"
        android:src="@drawable/ic_mylocation"
        app:layout_constraintBottom_toTopOf="@+id/main_ibtn_refresh"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/main_ibtn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/main_cd_ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_refresh" />
</androidx.constraintlayout.widget.ConstraintLayout>